samples/_failures_safe/1761309283_1bc74a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0f248de.c: In function ‘main’:
./samples/SAFE/__tmp_c0f248de.c:171:9: error: expected expression at end of input
  171 |         if (add_node(&g, name) ==
      |         ^~
./samples/SAFE/__tmp_c0f248de.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0f248de.c:171:9: error: expected declaration or statement at end of input
